can now add new random images

--- a/index.html
+++ b/index.html
@@ -24,56 +24,20 @@
         </div>
     </div>
 
-    <div class="products">
-        <div class="prod-card">
-            <img class="card-img" src="./pexels-photo-9304725.jpeg" alt="random">
-            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nulla maxime vel perspiciatis
-                laudantium reprehenderit a dolorem facere sed accusamus eos, est qui repellendus culpa quam vero, quod nemo.
-                Perspiciatis.</p>
-        </div>
-
-        <div class="prod-card">
-            <img class="card-img" src="./pexels-photo-9304725.jpeg" alt="random">
-            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nulla maxime vel perspiciatis
-                laudantium reprehenderit a dolorem facere sed accusamus eos, est qui repellendus culpa quam vero, quod nemo.
-                Perspiciatis.</p>
-        </div>
-
-        <div class="prod-card">
-            <img class="card-img" src="./pexels-photo-9304725.jpeg" alt="random">
-            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nulla maxime vel perspiciatis
-                laudantium reprehenderit a dolorem facere sed accusamus eos, est qui repellendus culpa quam vero, quod nemo.
-                Perspiciatis.</p>
-        </div>
-
-        <div class="prod-card">
-            <img class="card-img" src="./pexels-photo-9304725.jpeg" alt="random">
-            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nulla maxime vel perspiciatis
-                laudantium reprehenderit a dolorem facere sed accusamus eos, est qui repellendus culpa quam vero, quod nemo.
-                Perspiciatis.</p>
-        </div>
-
-        <div class="prod-card">
-            <img class="card-img" src="./pexels-photo-9304725.jpeg" alt="random">
-            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nulla maxime vel perspiciatis
-                laudantium reprehenderit a dolorem facere sed accusamus eos, est qui repellendus culpa quam vero, quod nemo.
-                Perspiciatis.</p>
-        </div>
-
-        <div class="prod-card">
-            <img class="card-img" src="./pexels-photo-9304725.jpeg" alt="random">
-            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nulla maxime vel perspiciatis
-                laudantium reprehenderit a dolorem facere sed accusamus eos, est qui repellendus culpa quam vero, quod nemo.
-                Perspiciatis.</p>
-        </div>
-
-
-        <div class="prod-card">
-            <img class="card-img" src="./pexels-photo-9304725.jpeg" alt="random">
-            <p class="card-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nulla maxime vel perspiciatis
-                laudantium reprehenderit a dolorem facere sed accusamus eos, est qui repellendus culpa quam vero, quod nemo.
-                Perspiciatis.</p>
-        </div>
+    <div class="products" id="prod-list">
+        
     </div>
+
+    <footer>
+        <div class="end">
+            <div class="add-new-card">
+                <button class="add"onclick="addNewCard()">+</button>
+            </div>
+        </div>
+    </footer>
+
+    
+
+    <script src="script.js"></script>
 </body>
 </html>
