--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     </div>
 
     <div class="products" id="prod-list">
-        
+        <div class="prod-card">
+            <img src="https://picsum.photos/300/200?random=868.0062659223678" class="card-img">
+            <p class="card-desc">tn2sqbccesk</p>
+            <span class="remove-btn" id="remove"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform:1.1 ;"><path d="M5 20a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8h2V6h-4V4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v2H3v2h2zM9 4h6v2H9zM8 8h9v12H7V8z"></path><path d="M9 10h2v8H9zm4 0h2v8h-2z"></path></svg></span>
+        </div>    
     </div>
 
     <footer>
